feat: refactor FilmService and fix N+1 problem